2000-08-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* Makefile.am:  Added all necessary environments.* files.

	* init.c:  Include environments.h.

	(scm_boot_guile_1):  Initialize the environments.

	* environments.[ch]:  Added.  Most of the credit for these files
	goes to Jost Boekemeier.

2000-08-25  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* procprop.c: #include "libguile/smob.h"; handle applicable smobs.

2000-08-24  Keisuke Nishida  <kxn30@po.cwru.edu>

	* smob.h (scm_smob_descriptor): Added `apply' and `gsubr_type'.
	* smob.c (scm_make_smob_type): Initialize `apply' and `gsubr_type'.
	(scm_set_smob_apply): New function.
	(scm_smob_apply_0, scm_smob_apply_1, scm_smob_apply_2,
	scm_smob_apply_3): New functions.
	* eval.c (SCM_CEVAL, SCM_APPLY): Added dispatch for applicable smobs.
	* procs.c (scm_procedure_p): Check applicable smobs.

2000-08-24  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* Makefile.am (BUILT_SOURCES): Experimentally added scmconfig.h
	also here.  (This is supposed to make sure that scmconfig.h is
	built before all sources in order to prevent that everything has
	to be rebuilt again.  Hope it works---I'm just guessing. :)

	* fluids.c (scm_fluid_set_x): Return SCM_UNSPECIFIED.

2000-08-23  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gc.c (scm_gc_mark): Don't use GUILE_DEBUG flag to compile in
	extra tests.  (GUILE_DEBUG is only supposed to make extra
	debugging functions available.)

2000-08-21  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.h (SCM_GC_CARD_N_CELLS): change to be a nice non-confusing
	constant.

2000-08-19  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.c (scm_gc_sweep): added a `continue' statement that have
 	fallen through the cracks in the merge.  thanks to Shuji Narazaki!

	* gc.h: removed some stuff that broke compilation for people and
 	wasn't actually needed anyway.

2000-08-18  Neil Jerram  <neil@ossau.uklinux.net>

	* filesys.c (scm_fcntl): Docstring fix - missing newlines inserted.
